Removed extra clearfix - layout problems fixed

--- a/css/style.css
+++ b/css/style.css
@@ -149,10 +149,12 @@ Media width breakpoints
 
     header img {
         float: right;
+        margin-left: 25px;
     }
 
     header p {
         padding-top: 60px;
+
     }
 
     .col  {
@@ -166,30 +168,16 @@ Media width breakpoints
        
     }
 
-    .container div:nth-child(even) {
-        content: "";
-        clear: both;
-        display: table;
-    }
    
 }
 
 @media (min-width: 1024px) {
 
-
-    /* .container {
-        width: 100%;
-    } */
-
     
     .col  {
-        float: right;
         margin: 5px 0 5px 0;
         width: 33%;
         overflow: auto;
-        /* padding-right: 15px;
-        padding-left: 15px; */
-        /* min-height: 400px; */
        
     }
     
